Bug 423218 - Notification with a progress bar shows the button for more info when there is no more info
Summary: Notification with a progress bar shows the button for more info when there is...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (show other bugs)
Version: 5.19.1
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-19 12:20 UTC by soee
Modified: 2020-06-22 09:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.19.2
Sentry Crash Report:


Attachments
Video rendering notification (64.71 KB, image/png)
2020-06-19 12:20 UTC, soee
Details

Note You need to log in before you can comment on or make changes to this bug.
Description soee 2020-06-19 12:20:47 UTC
Created attachment 129521 [details]
Video rendering notification

While rendering video in Kdenlive notification was rendered. It shows the rendering progress bar and 2 buttons: to stop the process and to show more info.

The more info button - when clicked - shows nothing so I think in some cases this button shouldn't be rendered at all.


STEPS TO REPRODUCE
1. Run Kdenlive
2. Prepare some video to render
3. Start rendering process

OBSERVED RESULT

The notification includes a button to show more info but when clicked no extra info is visible

EXPECTED RESULT

The notification either show some more info when the button next to stop is clicked to this button should be hidden


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon
KDE Plasma Version: 5.19.1
KDE Frameworks Version: 5.71
Qt Version: 5.14.2
Comment 1 Kai Uwe Broulik 2020-06-19 15:52:53 UTC
Kdenlive sets a description value without a label to show remaining time. That's a bit weird (i.e. why not use "remaining time" as label and the time as value) but supporting that should be easy (and actually remove some code)
Comment 2 Bug Janitor Service 2020-06-19 15:54:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/99
Comment 3 Kai Uwe Broulik 2020-06-22 09:50:11 UTC
Git commit 09e73292aa3e1d07d531d01bcdd086ab6b7801e7 by Kai Uwe Broulik.
Committed on 22/06/2020 at 09:50.
Pushed by broulik into branch 'Plasma/5.19'.

[Notifications] Support description where only a value is set
FIXED-IN: 5.19.2

M  +1    -2    applets/notifications/package/contents/ui/JobDetails.qml
M  +0    -2    libnotificationmanager/job_p.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/09e73292aa3e1d07d531d01bcdd086ab6b7801e7