[Notifications] Support description where only a value is set

BUG: 423218
FIXED-IN: 5.19.2